--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,5 @@
 sonar.projectKey=s223930381_8.2CDevSecOps
+sonar.organization=s223930381
 sonar.host.url=https://sonarcloud.io
 sonar.login=${SONAR_TOKEN}
 
