--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,12 @@
 sonar.projectKey=s223930381_8.2CDevSecOps
-sonar.organization=s223930381
+sonar.organization=6zhvc2q7
 sonar.host.url=https://sonarcloud.io
+sonar.token=${SONAR_TOKEN}
 
 sonar.sources=.
 sonar.exclusions=node_modules/**,test/**
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
+
+sonar.projectName=NodeJS Goof Vulnerable App
 sonar.sourceEncoding=UTF-8
 
